--- a/cronosphere-backend/package.json
+++ b/cronosphere-backend/package.json
@@ -5,8 +5,8 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "start": "node --experimental-modules src/server.js",
-    "dev": "nodemon --watch src --exec node --experimental-modules src/server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon --watch src --exec node src/server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -19,4 +19,3 @@
     "nodemon": "^3.0.2"
   }
 }
-
